--- a/cypress/.github/workflow/cypress.yml
+++ b/cypress/.github/workflow/cypress.yml
@@ -12,4 +12,5 @@ jobs:
       # and run all Cypress tests
       - name: Cypress run
         uses: cypress-io/github-action@v5
-        browser: chrome
+        with: 
+          browser: chrome
