--- a/cypress/.github/workflow/cypress.yml
+++ b/cypress/.github/workflow/cypress.yml
@@ -4,13 +4,14 @@ on: [push]
 
 jobs:
   cypress-run:
-    runs-on: ubuntu-22.04
+    runs-on: ubuntu-latest
+    strategy:
+      fail-fast: false 
     steps:
       - name: Checkout
         uses: actions/checkout@v3
-      # Install NPM dependencies, cache them correctly
-      # and run all Cypress tests
-      - name: Cypress run
-        uses: cypress-io/github-action@v5
-        with: 
+      - name: Cypress run 
+        id: cypress
+        uses: cypress-io/github-action@v4
+        with:
           browser: chrome
