--- a/cypress/.github/workflow/cypress.yml
+++ b/cypress/.github/workflow/cypress.yml
@@ -1,4 +1,4 @@
-name: End-to-end tests
+name: Cypress tests
 
 on: [push]
 
@@ -13,5 +13,3 @@ jobs:
       - name: Cypress run 
         id: cypress
         uses: cypress-io/github-action@v4
-        with:
-          browser: chrome
