--- a/.github/workflows/cypress.yml
+++ b/.github/workflows/cypress.yml
@@ -10,7 +10,7 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Install dependencies
-        run: npm install && npm install -g @lhci/cli@0.14.x
+        run: npm install
 
       - name: Cypress install
         uses: cypress-io/github-action@v6
@@ -21,9 +21,6 @@ jobs:
         uses: cypress-io/github-action@v6
         with:
           runTests: true
-
-      - name: Run Lighthouse
-        run: npx lhci autorun
 
       - uses: actions/upload-artifact@v4
         if: always()
