--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
   "author": "Bárbara Cabral",
   "license": "ISC",
   "dependencies": {
-    "cypress": "^10.11.0"
+    "cypress": "^10.11.0",
+    "lighthouse": "^12.1.0",
+    "lighthouse-ci": "^1.13.1"
   }
 }
