--- a/.github/workflows/cypress.yml
+++ b/.github/workflows/cypress.yml
@@ -1,36 +1,28 @@
-name: Cypress Tests
-
-on: push
-
+name: Cypress Tests Run on Pipeline
+on: [push]
 jobs:
-  install:
+  cypress-run:
     runs-on: ubuntu-latest
+    strategy:
+      fail-fast: false # https://github.com/cypress-io/github-action/issues/48
     steps:
       - name: Checkout
-        uses: actions/checkout@v4
-
-      - name: Install dependencies
-        run: npm install
-
-      - name: Cypress install
-        uses: cypress-io/github-action@v6
+        uses: actions/checkout@v3
+      - name: Install Cypress
+        run: npm install cypress
+      - name: Cypress run 
+        id: cypress
+        uses: cypress-io/github-action@v4
         with:
-          install: true
-
-      - name: Run Cypress tests
-        uses: cypress-io/github-action@v6
-        with:
-          runTests: true
-
-      - uses: actions/upload-artifact@v4
-        if: always()
-        with:
-          name: cypress-videos
-          path: cypress/videos
-
-      - uses: actions/upload-artifact@v4
+          browser: chrome
+      - uses: actions/upload-artifact@v3
         if: failure()
         with:
           name: cypress-screenshots
           path: cypress/screenshots
-
+      # Test run video was always captured, so this action uses "always()" condition
+      - uses: actions/upload-artifact@v3
+        if: always()
+        with:
+          name: cypress-videos
+          path: cypress/videos
